@@ -5,6 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
+.vscode
 secret.json
 test.py
 # Distribution / packaging
